Initial comments of planning

--- a/Unsolved/jquery-calculator.html
+++ b/Unsolved/jquery-calculator.html
@@ -78,6 +78,14 @@
 $(document).ready(function() {
 
 // Your code here...
+// event listeners for all "number" classes
+
+// event listeners for all "operator" classes
+
+// event listener for "equals" class
+
+// event listener for "clear" class
+
 
 
 });
