--- a/Unsolved/jquery-calculator.html
+++ b/Unsolved/jquery-calculator.html
@@ -78,6 +78,11 @@
 $(document).ready(function() {
 
 // Your code here...
+// variables storing labels
+var firstNum = $("#first-number");
+var secondNum = $("#second-number");
+var operand = $("#operator");
+var answer = $("#result");
 // event listeners for all "number" classes
 
 // event listeners for all "operator" classes
@@ -85,7 +90,12 @@ $(document).ready(function() {
 // event listener for "equals" class
 
 // event listener for "clear" class
-
+$(".clear").click(function(){
+firstNum.text("");
+secondNum.text("");
+operand.text("");
+answer.text("");
+});
 
 
 });
