rmvd line 92 and changed text to append 91

--- a/Unsolved/jquery-calculator.html
+++ b/Unsolved/jquery-calculator.html
@@ -88,8 +88,7 @@
       // event listeners for all "number" classes
       $(".number").click(function(){
         console.log("Number Checked");
-        firstNum.text($(this).attr("value"));
-        $("firstNum").append(value);
+        firstNum.append($(this).attr("value"));
       })
 
       // event listeners for all "operator" classes
