Planning comment for equal event

--- a/Unsolved/jquery-calculator.html
+++ b/Unsolved/jquery-calculator.html
@@ -121,8 +121,8 @@
       // event listener for "equals" class
       $(".equal").click(function () {
         console.log("Equals clicked");
-        // if/else chain determining correct operand
-        // if plus selected
+        // will read firstNum + operand + secondNum
+        // output to answer
 
       })
       // event listener for "clear" class
