Created variable to store correct operand

--- a/Unsolved/jquery-calculator.html
+++ b/Unsolved/jquery-calculator.html
@@ -84,6 +84,7 @@
       var secondNum = $("#second-number");
       var operand = $("#operator");
       var answer = $("#result");
+      var mathType;
       // event listeners for all "number" classes
       $(".number").click(function () {
         console.log("Number Checked");
