--- a/Unsolved/jquery-calculator.html
+++ b/Unsolved/jquery-calculator.html
@@ -102,6 +102,7 @@
       // event listeners for all "operator" classes
       $("#button-plus").click(function () {
         console.log("plus")
+        mathType = $(this).attr("value");
         // find method to display ICON of operand
         // operand.text($(this).attr("value"));
         // if/else statements
